# Clementine

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Clementine.sln  Makefile  README.md  clem.cppcheck  cmake_install.cmake
.github/workflows/: cmake.yml
clem/: CMakeLists.txt  Makefile  attribute.cpp  attribute.h  basic_physics.cpp  basic_physics.h  camera.cpp  camera.h  clem.hpp  common.hpp  common_renderer.cpp  common_renderer.h  component.h  coord.hpp  cursor.cpp  cursor.h  game_object.cpp  game_object.h  input.h  input_component.cpp  input_component.h  keyboard_input.cpp  keyboard_input.h  linux_renderer.cpp  linux_renderer.h  main  main.cpp  os.hpp  physics_component.cpp  physics_component.h  renderer.h  scene.cpp  scene.h  size.hpp  terminal.cpp  terminal.h  texture.hpp  type.hpp  vector.hpp  windows_renderer.cpp  (+1 more)
clem-cppcheck-build-dir/: attribute.a1  camera.a1  common_renderer.a1  cursor.a1  files.txt  game_object.a1  input_component.a1  lastResults.xml  main.a1  new_attribute.a1  scene.a1  statistics.txt  terminal.a1
clem/type/: coord.hpp  rect.cpp  rect.h  rect.hpp  size.hpp  vector.cpp  vector.h
examples/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/balls/: main.cpp
examples/greedy_snake/: CMakeLists.txt  Makefile  greedy_snake  main.cpp  snake.hpp
lib/: clementine.lib
